# DrawTheName

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yaml  tests.yaml
concept_banks/: ftw_concepts.txt  general_concepts.txt
configs/: ftw.yaml  ftw.yaml.example  standard_cv.yaml  standard_cv.yaml.example
drawthename/: clustering.py  concept_bank.py  embeddings.py  ftw_compare.py  naming.py  pipeline.py  regions.py  segmentation_model.py
drawthename/data/: cityscapes.py  ftw.py
scripts/: run_ftw.py  run_standard_cv.py  validate_naming_synthetic.py  validate_naming_synthetic_ftw.py
tests/: test_clustering.py  test_concept_bank.py  test_ftw.py  test_ftw_compare.py  test_naming.py  test_pipeline.py  test_regions.py
