[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "drawthename"
version = "0.1.0"
description = "A bias naming method for segmentation tasks, with application to remote sensing (FTW/PRUE)."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.12,<3.15"
dependencies = [
  "ftfy>=6.1,<7",
  "geopandas>=0.14,<2",
  "matplotlib>=3.7,<4",
  "numba>=0.61,<1",
  "numpy>=1.24,<3",
  "open-clip-torch>=2.24,<3",
  "pandas>=2,<3",
  "pyyaml>=6,<7",
  "rasterio>=1.3,<2",
  "regex>=2023",
  "scikit-image>=0.22,<2",
  "scikit-learn>=1.3,<2",
  "scipy>=1.11,<2",
  "torch>=2.2,<3",
  "torchgeo>=0.9,<1",
  "torchvision>=0.17,<0.26",
  "tqdm>=4.65,<5",
  "transformers>=4.45,<5",
  "umap-learn>=0.5,<1",
  "ftw-tools",
]
optional-dependencies.dev = [
  "pytest>=7.4,<9",
  "ruff>=0.1,<1",
]
urls.Repository = "https://github.com/btokas/DrawTheName"

[tool.uv.sources]
# local sibling checkout -- provides load_model_from_checkpoint (PRUE) and
# FTW's own tile/dataset loading, both reused rather than reimplemented.
ftw-tools = { path = "../ftw-baselines", editable = true }
torch = [ { index = "pytorch-cu128" } ]
torchvision = [ { index = "pytorch-cu128" } ]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
fix = true
format.quote-style = "double"
lint.isort.split-on-trailing-comma = false

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "." ]
